Dynamically add wide playlist card to library generater

--- a/spotify clone.html
+++ b/spotify clone.html
@@ -57,33 +57,33 @@
             </div>
             <div class="tags">
                 <ul>
-                    <li><button>Playlists</button></li>
-                    <li><button>Artists</button></li>
-                    <li><button>Albums</button></li>
-                    <li><button>Podcasts & Shows</button></li>
+                    <li><button class="tag-btn">Playlists</button></li>
+                    <li><button class="tag-btn">Artists</button></li>
+                    <li><button class="tag-btn">Albums</button></li>
+                    <li><button class="tag-btn">Podcasts & Shows</button></li>
                     <button class="hidden-more" style="display: none;">
                         <svg data-encore-id="icon" role="img" height="16" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
                     </button>
                 </ul>
             </div>
-            
-
-            <div class="search-in-lib">
-                <span class="search-left"><svg data-encore-id="icon" height="17" role="icon" xmlns="http://www.w3.org/2000/svg" height='21px' aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE search-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24">
-                        <path
-                            d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z">
-                        </path>
-                    </svg>
-                </span>
-                <span class="search-right">
-                    <small>Recents</small>
-                    <svg data-encore-id="icon" height='16' role="img" xmlns="http://www.w3.org/2000/svg"
-                        aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk">
-                        <path
-                            d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z">
-                        </path>
-                    </svg>
-                </span>
+            <div class="wide-lib-card-container">
+                <div class="search-in-lib">
+                    <span class="search-left"><svg data-encore-id="icon" height="17" role="icon" xmlns="http://www.w3.org/2000/svg" height='21px' aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE search-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24">
+                            <path
+                                d="M10.533 1.27893C5.35215 1.27893 1.12598 5.41887 1.12598 10.5579C1.12598 15.697 5.35215 19.8369 10.533 19.8369C12.767 19.8369 14.8235 19.0671 16.4402 17.7794L20.7929 22.132C21.1834 22.5226 21.8166 22.5226 22.2071 22.132C22.5976 21.7415 22.5976 21.1083 22.2071 20.7178L17.8634 16.3741C19.1616 14.7849 19.94 12.7634 19.94 10.5579C19.94 5.41887 15.7138 1.27893 10.533 1.27893ZM3.12598 10.5579C3.12598 6.55226 6.42768 3.27893 10.533 3.27893C14.6383 3.27893 17.94 6.55226 17.94 10.5579C17.94 14.5636 14.6383 17.8369 10.533 17.8369C6.42768 17.8369 3.12598 14.5636 3.12598 10.5579Z">
+                            </path>
+                        </svg>
+                    </span>
+                    <span class="search-right">
+                        <small>Recents</small>
+                        <svg data-encore-id="icon" height='16' role="img" xmlns="http://www.w3.org/2000/svg"
+                            aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk">
+                            <path
+                                d="M15 14.5H5V13h10v1.5zm0-5.75H5v-1.5h10v1.5zM15 3H5V1.5h10V3zM3 3H1V1.5h2V3zm0 11.5H1V13h2v1.5zm0-5.75H1v-1.5h2v1.5z">
+                            </path>
+                        </svg>
+                    </span>
+                </div>
             </div>
         </article>
     </aside>
