--- a/spotify clone.html
+++ b/spotify clone.html
@@ -7,6 +7,7 @@
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="utility.css">
+    <link rel="stylesheet" href="main-style.css">
 </head>
 
 <body>
@@ -95,20 +96,63 @@
     </div>
 
     <main>
-        <nav></nav>
-
-        <header></header>
-
-        <div class="music">
-            <h2></h2>
-            <div class="playlist"></div>
+        <div class="main-top">
+            <div class="left">
+                <button>
+                    <a href="" class="nav-main-forward-backword">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height = '18' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk IYDlXmBmmUKHveMzIPCF"><path d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"></path></svg>
+                </a>
+                </button>
+                <button>
+                    <a href="" class="nav-main-forward-backword">
+                    <svg data-encore-id="icon" role="img" height="18" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
+                </a>    
+                </button>
+            </div>
+            <div class="right">
+                <button class="premium-btn">Explore Premium</button>
+                <button class="install-btn"> <img src="assets/arrow-down-circle.svg" alt=""> Install App</button>
+                <button class="bell-btn">
+                    <svg data-encore-id="icon" class="white-on-hover" role="img" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" height='16' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI">
+                        <path d="M8 1.5a4 4 0 0 0-4 4v3.27a.75.75 0 0 1-.1.373L2.255 12h11.49L12.1 9.142a.75.75 0 0 1-.1-.374V5.5a4 4 0 0 0-4-4zm-5.5 4a5.5 5.5 0 0 1 11 0v3.067l2.193 3.809a.75.75 0 0 1-.65 1.124H10.5a2.5 2.5 0 0 1-5 0H.957a.75.75 0 0 1-.65-1.124L2.5 8.569V5.5zm4.5 8a1 1 0 1 0 2 0H7z"></path>
+                    </svg>
+                </button>
+                <button class="user-btn"><strong>K</strong></button>
+            </div>
         </div>
-
-        <footer></footer>
-
     </main>
 
-    <div class="current"></div>
+    <div class="current">
+        <div class="cur-info"></div>
+        <div class="player">
+            <div class="upper-btns">
+                <button class="shuffle-btn">
+                    <svg data-encore-id="icon" class="white-on-hover" role="img" aria-hidden="true" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M13.151.922a.75.75 0 1 0-1.06 1.06L13.109 3H11.16a3.75 3.75 0 0 0-2.873 1.34l-6.173 7.356A2.25 2.25 0 0 1 .39 12.5H0V14h.391a3.75 3.75 0 0 0 2.873-1.34l6.173-7.356a2.25 2.25 0 0 1 1.724-.804h1.947l-1.017 1.018a.75.75 0 0 0 1.06 1.06L15.98 3.75 13.15.922zM.391 3.5H0V2h.391c1.109 0 2.16.49 2.873 1.34L4.89 5.277l-.979 1.167-1.796-2.14A2.25 2.25 0 0 0 .39 3.5z"></path><path d="m7.5 10.723.98-1.167.957 1.14a2.25 2.25 0 0 0 1.724.804h1.947l-1.017-1.018a.75.75 0 1 1 1.06-1.06l2.829 2.828-2.829 2.828a.75.75 0 1 1-1.06-1.06L13.109 13H11.16a3.75 3.75 0 0 1-2.873-1.34l-.787-.938z"></path></svg>
+                </button>
+                <button class="prev-song-btn">
+                    <svg data-encore-id="icon" class="white-on-hover" role="img" aria-hidden="true" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M3.3 1a.7.7 0 0 1 .7.7v5.15l9.95-5.744a.7.7 0 0 1 1.05.606v12.575a.7.7 0 0 1-1.05.607L4 9.149V14.3a.7.7 0 0 1-.7.7H1.7a.7.7 0 0 1-.7-.7V1.7a.7.7 0 0 1 .7-.7h1.6z"></path></svg>
+                </button>
+                <button id="play-btn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M3 1.713a.7.7 0 0 1 1.05-.607l10.89 6.288a.7.7 0 0 1 0 1.212L4.05 14.894A.7.7 0 0 1 3 14.288V1.713z"></path></svg>
+                </button>
+                <button class="next-song-btn">
+                    <svg data-encore-id="icon" class="white-on-hover" role="img" aria-hidden="true" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M12.7 1a.7.7 0 0 0-.7.7v5.15L2.05 1.107A.7.7 0 0 0 1 1.712v12.575a.7.7 0 0 0 1.05.607L12 9.149V14.3a.7.7 0 0 0 .7.7h1.6a.7.7 0 0 0 .7-.7V1.7a.7.7 0 0 0-.7-.7h-1.6z"></path></svg>
+                </button>
+                <button class="loop-song-btn">
+                    <svg data-encore-id="icon" role="img" aria-hidden="true" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M0 4.75A3.75 3.75 0 0 1 3.75 1h.75v1.5h-.75A2.25 2.25 0 0 0 1.5 4.75v5A2.25 2.25 0 0 0 3.75 12H5v1.5H3.75A3.75 3.75 0 0 1 0 9.75v-5zM12.25 2.5h-.75V1h.75A3.75 3.75 0 0 1 16 4.75v5a3.75 3.75 0 0 1-3.75 3.75H9.81l1.018 1.018a.75.75 0 1 1-1.06 1.06L6.939 12.75l2.829-2.828a.75.75 0 1 1 1.06 1.06L9.811 12h2.439a2.25 2.25 0 0 0 2.25-2.25v-5a2.25 2.25 0 0 0-2.25-2.25z"></path><path d="M9.12 8V1H7.787c-.128.72-.76 1.293-1.787 1.313V3.36h1.57V8h1.55z"></path></svg>
+                </button>
+            </div>
+            <div class="song-length-display">
+                <small class="time time-lapsed">1:33</small>
+                <div class="timelines">
+                    <div id="timeline-bg"></div>
+                    <div id="timeline-over"></div>
+                </div>
+                <small class="time time-left">2:10</small>
+            </div>
+        </div>
+        <div class="controles"></div>
+    </div>
 
     <script src="script.js"></script>
 
