--- a/spotify clone.html
+++ b/spotify clone.html
@@ -67,7 +67,7 @@
                     </button>
                 </ul>
             </div>
-            <div class="wide-lib-card-container">
+            <div class="wide-lib-card-container wide-card-container">
                 <div class="search-in-lib">
                     <span class="search-left"><svg data-encore-id="icon" height="17" role="icon" xmlns="http://www.w3.org/2000/svg" height='21px' aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE search-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24">
                             <path
@@ -96,34 +96,135 @@
     </div>
 
     <main>
-        <div class="main-top">
-            <div class="left">
-                <button>
-                    <a href="" class="nav-main-forward-backword">
-                    <svg data-encore-id="icon" role="img" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height = '18' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk IYDlXmBmmUKHveMzIPCF"><path d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"></path></svg>
-                </a>
-                </button>
-                <button>
-                    <a href="" class="nav-main-forward-backword">
-                    <svg data-encore-id="icon" role="img" height="18" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
-                </a>    
-                </button>
+        <div class="main-sticky">
+            <div class="main-top">
+                <div class="left">
+                    <button>
+                        <a href="" class="nav-main-forward-backword">
+                        <svg data-encore-id="icon" role="img" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" height = '18' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 cAMMLk IYDlXmBmmUKHveMzIPCF"><path d="M11.03.47a.75.75 0 0 1 0 1.06L4.56 8l6.47 6.47a.75.75 0 1 1-1.06 1.06L2.44 8 9.97.47a.75.75 0 0 1 1.06 0z"></path></svg>
+                    </a>
+                    </button>
+                    <button>
+                        <a href="" class="nav-main-forward-backword">
+                        <svg data-encore-id="icon" role="img" height="18" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
+                    </a>    
+                    </button>
+                </div>
+                <div class="right">
+                    <button class="premium-btn">Explore Premium</button>
+                    <button class="install-btn"> <img src="assets/arrow-down-circle.svg" alt=""> Install App</button>
+                    <button class="bell-btn">
+                        <svg data-encore-id="icon" class="white-on-hover" role="img" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" height='16' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI">
+                            <path d="M8 1.5a4 4 0 0 0-4 4v3.27a.75.75 0 0 1-.1.373L2.255 12h11.49L12.1 9.142a.75.75 0 0 1-.1-.374V5.5a4 4 0 0 0-4-4zm-5.5 4a5.5 5.5 0 0 1 11 0v3.067l2.193 3.809a.75.75 0 0 1-.65 1.124H10.5a2.5 2.5 0 0 1-5 0H.957a.75.75 0 0 1-.65-1.124L2.5 8.569V5.5zm4.5 8a1 1 0 1 0 2 0H7z"></path>
+                        </svg>
+                    </button>
+                    <button class="user-btn"><strong>K</strong></button>
+                </div>
             </div>
-            <div class="right">
-                <button class="premium-btn">Explore Premium</button>
-                <button class="install-btn"> <img src="assets/arrow-down-circle.svg" alt=""> Install App</button>
-                <button class="bell-btn">
-                    <svg data-encore-id="icon" class="white-on-hover" role="img" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" height='16' viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI">
-                        <path d="M8 1.5a4 4 0 0 0-4 4v3.27a.75.75 0 0 1-.1.373L2.255 12h11.49L12.1 9.142a.75.75 0 0 1-.1-.374V5.5a4 4 0 0 0-4-4zm-5.5 4a5.5 5.5 0 0 1 11 0v3.067l2.193 3.809a.75.75 0 0 1-.65 1.124H10.5a2.5 2.5 0 0 1-5 0H.957a.75.75 0 0 1-.65-1.124L2.5 8.569V5.5zm4.5 8a1 1 0 1 0 2 0H7z"></path>
-                    </svg>
-                </button>
-                <button class="user-btn"><strong>K</strong></button>
+            <div class="main-tags tags">
+                <ul>
+                    <li><button class="tag-btn">All</button></li>
+                    <li><button class="tag-btn">Music</button></li>
+                    <li><button class="tag-btn">Podcasts</button></li>
+                </ul>
             </div>
+        </div>
+        <div class="wide-main-card-container">
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                <p class="card-bottom">bottomPart</p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom">bottomPart</p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom"></p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom"></p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom">bottomPart</p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom">bottomPart</p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom"></p>
+                </div>
+            </div>
+            <div class="wide-card">
+                <img src="assets/zebra.jfif" height = '50'>
+                <div class="card-inner-text">
+                    <h4 class="card-title">cardTitle</h4>
+                    <p class="card-bottom">bottomPart</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="a-type-of-playlist">
+            <h3>Made For Kitty</h3>
+            <section class="music-playlist-container">
+                <article class="sq-playlist-card">
+                    <img src="assets/zebra.jfif">
+                    <strong>Title</strong>
+                    <p>Lorem ipsum dolor sit amet adipisicing elit</p>
+                </article>
+                <article class="sq-playlist-card">
+                    <img src="assets/zebra.jfif">
+                    <strong>Title</strong>
+                    <p>Lorem ipsum dolor sit amet   elit</p>
+                </article>
+                <article class="sq-playlist-card">
+                    <img src="assets/zebra.jfif">
+                    <strong>Title</strong>
+                    <p>Lorem ipsum dolor sit   adipisicing elit</p>
+                </article>
+                <article class="sq-playlist-card">
+                    <img src="assets/zebra.jfif">
+                    <strong>Title</strong>
+                    <p>Lorem ipsum dolor </p>
+                </article>
+            </section>
         </div>
     </main>
 
     <div class="current">
-        <div class="cur-info"></div>
+        <div class="cur-info">
+            <img src="assets/zebra.jfif" height="80%">
+            <div class="card-inner-text">
+                <h4 class="card-title">cardTitle</h4>
+                <div class="card-bottom">bottomPart</div>
+            </div>
+            <button class="white-on-hover">
+                <svg height="16" xmlns="http://www.w3.org/2000/svg" data-encore-id="icon" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8z"></path><path d="M11.75 8a.75.75 0 0 1-.75.75H8.75V11a.75.75 0 0 1-1.5 0V8.75H5a.75.75 0 0 1 0-1.5h2.25V5a.75.75 0 0 1 1.5 0v2.25H11a.75.75 0 0 1 .75.75z"></path></svg>
+        </div>
         <div class="player">
             <div class="upper-btns">
                 <button class="shuffle-btn">
@@ -144,34 +245,38 @@
             </div>
             <div class="song-length-display">
                 <small class="time time-lapsed">1:33</small>
-                <div class="timelines">
-                    <div id="timeline-bg"></div>
-                    <div id="timeline-over"></div>
+                <div class="lines" id="timelines">
+                    <div id="timeline-bg" class="line-bg"></div>
+                    <div id="timeline-above" class="line-above">
+                        <span class="cur-value-circle"></span>
+                    </div>
                 </div>
                 <small class="time time-left">2:10</small>
             </div>
         </div>
         <div class="bottom-right-controles">
-            <button class='now-playing-view-btn'>
+            <button class='now-playing-view-btn white-on-hover'>
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M11.196 8 6 5v6l5.196-3z"></path><path d="M15.002 1.75A1.75 1.75 0 0 0 13.252 0h-10.5a1.75 1.75 0 0 0-1.75 1.75v12.5c0 .966.783 1.75 1.75 1.75h10.5a1.75 1.75 0 0 0 1.75-1.75V1.75zm-1.75-.25a.25.25 0 0 1 .25.25v12.5a.25.25 0 0 1-.25.25h-10.5a.25.25 0 0 1-.25-.25V1.75a.25.25 0 0 1 .25-.25h10.5z"></path></svg></button>
-            <button class="queu-btne">
+            <button class="queu-btne white-on-hover">
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M15 15H1v-1.5h14V15zm0-4.5H1V9h14v1.5zm-14-7A2.5 2.5 0 0 1 3.5 1h9a2.5 2.5 0 0 1 0 5h-9A2.5 2.5 0 0 1 1 3.5zm2.5-1a1 1 0 0 0 0 2h9a1 1 0 1 0 0-2h-9z"></path></svg></button>
-            <button class="connect-to-device-btn">
+            <button class="connect-to-device-btn white-on-hover">
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-hidden="true" class="Svg-sc-ytk21e-0 dYnaPI" viewBox="0 0 16 16"><path d="M6 2.75C6 1.784 6.784 1 7.75 1h6.5c.966 0 1.75.784 1.75 1.75v10.5A1.75 1.75 0 0 1 14.25 15h-6.5A1.75 1.75 0 0 1 6 13.25V2.75zm1.75-.25a.25.25 0 0 0-.25.25v10.5c0 .138.112.25.25.25h6.5a.25.25 0 0 0 .25-.25V2.75a.25.25 0 0 0-.25-.25h-6.5zm-6 0a.25.25 0 0 0-.25.25v6.5c0 .138.112.25.25.25H4V11H1.75A1.75 1.75 0 0 1 0 9.25v-6.5C0 1.784.784 1 1.75 1H4v1.5H1.75zM4 15H2v-1.5h2V15z"></path><path d="M13 10a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm-1-5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path></svg></button>
-            <button class="mute-btn">
+            <button class="mute-btn white-on-hover">
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="presentation" aria-label="Volume high" aria-hidden="true" id="volume-icon" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 kcUFwU"><path d="M9.741.85a.75.75 0 0 1 .375.65v13a.75.75 0 0 1-1.125.65l-6.925-4a3.642 3.642 0 0 1-1.33-4.967 3.639 3.639 0 0 1 1.33-1.332l6.925-4a.75.75 0 0 1 .75 0zm-6.924 5.3a2.139 2.139 0 0 0 0 3.7l5.8 3.35V2.8l-5.8 3.35zm8.683 4.29V5.56a2.75 2.75 0 0 1 0 4.88z"></path><path d="M11.5 13.614a5.752 5.752 0 0 0 0-11.228v1.55a4.252 4.252 0 0 1 0 8.127v1.55z"></path></svg></button>
-            <div class="soundlines">
-                <div id="soundline-bg"></div>
-                <div id="soundline-over"></div>
+            <div id="soundlines" class="lines">
+                <div id="soundline-bg" class="line-bg"></div>
+                <div id="soundline-above" class="line-above">
+                    <span class="cur-value-circle"></span>
+                </div>
             </div>
-            <button class="open-mini-player-btn">
+            <button class="open-mini-player-btn white-on-hover">
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M16 2.45c0-.8-.65-1.45-1.45-1.45H1.45C.65 1 0 1.65 0 2.45v11.1C0 14.35.65 15 1.45 15h5.557v-1.5H1.5v-11h13V7H16V2.45z"></path><path d="M15.25 9.007a.75.75 0 0 1 .75.75v4.493a.75.75 0 0 1-.75.75H9.325a.75.75 0 0 1-.75-.75V9.757a.75.75 0 0 1 .75-.75h5.925z"></path></svg></button>
-            <button class="full-screen-btn">
+            <button class="full-screen-btn white-on-hover">
                 <svg data-encore-id="icon" height="16" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dYnaPI"><path d="M6.53 9.47a.75.75 0 0 1 0 1.06l-2.72 2.72h1.018a.75.75 0 0 1 0 1.5H1.25v-3.579a.75.75 0 0 1 1.5 0v1.018l2.72-2.72a.75.75 0 0 1 1.06 0zm2.94-2.94a.75.75 0 0 1 0-1.06l2.72-2.72h-1.018a.75.75 0 1 1 0-1.5h3.578v3.579a.75.75 0 0 1-1.5 0V3.81l-2.72 2.72a.75.75 0 0 1-1.06 0z"></path></svg></button>
         </div>
     </div>
 
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
