Aside now collapse when sep cursor is near left edge

--- a/spotify clone.html
+++ b/spotify clone.html
@@ -14,7 +14,7 @@
     <aside class="aside">
         <div class="top-left">
             <button class="home ">
-                <svg data-encore-id="icon" xmlns="http://www.w3.org/2000/svg" height='21px' role="img"
+                <svg data-encore-id="icon" xmlns="http://www.w3.org/2000/svg" height='27px' role="img"
                     aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE home-active-icon QbaKKdcHNA2x3_YJvpYu"
                     viewBox="0 0 24 24">
                     <path
@@ -24,7 +24,7 @@
                 <h4>Home</h2>
             </button>
             <button class="search">
-                <svg data-encore-id="icon" role="img" xmlns="http://www.w3.org/2000/svg" height='21px'
+                <svg data-encore-id="icon" role="img" xmlns="http://www.w3.org/2000/svg" height='27px'
                     aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE search-icon QbaKKdcHNA2x3_YJvpYu"
                     viewBox="0 0 24 24">
                     <path
@@ -34,16 +34,12 @@
                 <h4>Search</h2>
             </button>
         </div>
+
         <article class="library">
             <div class="title">
                 <div class="left">
-                    <button class="lib-collapse">
-                        <svg data-encore-id="icon" role="img" xmlns="http://www.w3.org/2000/svg" fill='#b3b3b3'
-                            height='21px' aria-hidden="true" viewBox="0 0 24 24" class="Svg-sc-ytk21e-0 bneLcE">
-                            <path
-                                d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z">
-                            </path>
-                        </svg>
+                    <button class="lib-collapse"> 
+                        <svg data-encore-id="icon" role="img" xmlns="http://www.w3.org/2000/svg" fill='#b3b3b3' height='27px' aria-hidden="true" viewBox="0 0 24 24" class="Svg-sc-ytk21e-0 bneLcE"> <path d="M3 22a1 1 0 0 1-1-1V3a1 1 0 0 1 2 0v18a1 1 0 0 1-1 1zM15.5 2.134A1 1 0 0 0 14 3v18a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V6.464a1 1 0 0 0-.5-.866l-6-3.464zM9 2a1 1 0 0 0-1 1v18a1 1 0 1 0 2 0V3a1 1 0 0 0-1-1z"></path></svg>
                         <h3>Your Library</h3>
                     </button>
                 </div>
@@ -56,17 +52,15 @@
                     </button>
                 </div>
             </div>
-            <div class="tags">
-                <ul>
-                    <li><button class="tag-btn">Playlists</button></li>
-                    <li><button class="tag-btn">Artists</button></li>
-                    <li><button class="tag-btn">Albums</button></li>
-                    <li><button class="tag-btn">Podcasts & Shows</button></li>
-                    <button class="hidden-more" style="display: none;">
-                        <svg data-encore-id="icon" role="img" height="16" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
-                    </button>
-                </ul>
-            </div>
+            <ul class="tags">
+                <li><button class="tag-btn">Playlists</button></li>
+                <li><button class="tag-btn">Artists</button></li>
+                <li><button class="tag-btn">Albums</button></li>
+                <li><button class="tag-btn">Podcasts & Shows</button></li>
+                <button class="hidden-more" style="display: none;">
+                    <svg data-encore-id="icon" role="img" height="16" aria-hidden="true" viewBox="0 0 16 16" class="Svg-sc-ytk21e-0 dCAvla"><path d="M4.97.47a.75.75 0 0 0 0 1.06L11.44 8l-6.47 6.47a.75.75 0 1 0 1.06 1.06L13.56 8 6.03.47a.75.75 0 0 0-1.06 0z"></path></svg>
+                </button>
+            </ul>
             <ul class="wide-lib-card-container wide-card-container">
                 <div class="search-in-lib">
                     <span class="search-left">
@@ -115,13 +109,11 @@
                     <button class="user-btn"><strong>K</strong></button>
                 </div>
             </div>
-            <div class="main-tags tags">
-                <ul>
-                    <li><button class="tag-btn">All</button></li>
-                    <li><button class="tag-btn">Music</button></li>
-                    <li><button class="tag-btn">Podcasts</button></li>
-                </ul>
-            </div>
+            <ul class="main-tags tags">
+                <li><button class="tag-btn">All</button></li>
+                <li><button class="tag-btn">Music</button></li>
+                <li><button class="tag-btn">Podcasts</button></li>
+            </ul>
         </div>
         <div class="wide-main-card-container">
             <div class="wide-card">
@@ -205,6 +197,11 @@
                     <strong>Title</strong>
                     <p>Lorem ipsum dolor</p>
                 </article>
+                <article class="sq-playlist-card">
+                    <img src="assets/zebra.jfif">
+                    <strong>Title</strong>
+                    <p>Lorem ipsum dolor</p>
+                </article>
             </section>
         </div>
     </main>
@@ -270,6 +267,6 @@
         </div>
     </div>
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
